--- a/index.html
+++ b/index.html
@@ -7,10 +7,34 @@
 </head>
 
 <body>
-  <div class="zone green">Header</div>
-  <div class="zone red">Cover</div>
-  <div class="zone blue">Project Grid</div>
-  <div class="zone yellow">Footer</div>
+  <header>
+    <nav class="zone blue sticky">
+      <ul class="main-nav">
+        <li><a href="">About</a></li>
+        <li><a href="">Products</a></li>
+        <li><a href="">Our Team</a></li>
+        <li class="push"><a href="">Contacts</a></li>
+      </ul>
+      </div>
+  </header>
+  <section class="red">
+    <div class="container"><img class="cover" src="./img/undraw.png" alt="computer">
+    </div>
+  </section>
+  <div class="zone blue grid-container">
+    <div class="box zone"> <img src="./img/data_storage.png" alt="Data Storage"></div>
+    <div class="box zone"> <img src="./img/desktop_analytics.png" alt="Data Analtyics"></div>
+    <div class="box zone"> <img src="./img/files_2.png" alt="Data Storage"></div>
+    <div class="box zone"> <img src="./img/monitor_coding.png" alt="Data Storage"></div>
+    <div class="box zone"> <img src="./img/monitor_settings_2.png" alt="Data Storage"></div>
+    <div class="box zone"> <img src="./img/server_2_2.png" alt="Data Storage"></div>
+    <div class="box zone"> <img src="./img/server_3.png" alt="Data Storage"></div>
+    <div class="box zone"> <img src="./img/server_safe_2.png" alt="Data Storage"></div>
+  </div>
+  </div>
+  <footer>
+    <div class="zone green">Zero to Mastery</div>
+  </footer>
 </body>
 
 </html>
